// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorWebsitesAction renders only a url 1`] = `
<ListItemAction>
  <ExternalLink
    as="a"
    href="www.descriptionless.com/url"
  >
    <Tooltip
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      placement="top"
      title="Personal website"
      transitionName="zoom-big-fast"
    >
      <ForwardRef(LinkOutlined) />
    </Tooltip>
  </ExternalLink>
</ListItemAction>
`;

exports[`AuthorWebsitesAction renders only blog 1`] = `
<ListItemAction>
  <ExternalLink
    as="a"
    href="https://author.wordpress.com"
  >
    <Tooltip
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      placement="top"
      title="Personal website"
      transitionName="zoom-big-fast"
    >
      <ForwardRef(LinkOutlined) />
    </Tooltip>
  </ExternalLink>
</ListItemAction>
`;

exports[`AuthorWebsitesAction renders with a blog and urls in a dropdown 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <Button
        block={false}
        ghost={false}
        htmlType="button"
        loading={false}
      >
        <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="top"
          title="Personal website"
          transitionName="zoom-big-fast"
        >
          <ForwardRef(LinkOutlined) />
        </Tooltip>
      </Button>
    }
  >
    <MenuItem
      key="https://author.wordpress.com"
    >
      <ExternalLink
        as="a"
        href="https://author.wordpress.com"
      >
        Blog
      </ExternalLink>
    </MenuItem>
    <MenuItem
      key="https://www.whatever.com/author"
    >
      <ExternalLink
        as="a"
        href="https://www.whatever.com/author"
      >
        whatever.com/author
      </ExternalLink>
    </MenuItem>
    <MenuItem
      key="www.descriptionless.com/url"
    >
      <ExternalLink
        as="a"
        href="www.descriptionless.com/url"
      >
        descriptionless.com/url
      </ExternalLink>
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;
